[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kodtld <kodu@live.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
praw = "^7.7.0"
selenium = "^4.8.3"
pillow = "^9.5.0"
gtts = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
